# HW_WEB_14

./: main.py  pyproject.toml
docs/: make.bat
docs/source/: conf.py
migrations/versions/: 46fe2d0ebbad_new_init.py  7e0a7948acd7_init.py
src/entity/: models.py
src/routes/: auth.py  users.py
src/services/: auth.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_users.py
