[tool.poetry]
name = "hw-web-14"
version = "0.1.0"
description = ""
authors = ["ArtemZhuravlev <Utah954@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.3"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
fastapi = "^0.109.2"
libgravatar = "^1.0.4"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
pydantic-extra-types = "^2.5.0"
phonenumbers = "^8.13.30"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.38.0"
jinja2 = "^3.1.3"
pytest = "^8.0.0"
sphinx = "^7.2.6"
httpx = "^0.26.0"
aiosqlite = "^0.19.0"
greenlet = "^3.0.3"
bcrypt = "^4.1.2"
myapplication = "^0.1.0"
app = "^0.0.1"
pytest-asyncio = "^0.23.5"
coverage = "^7.4.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.19.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
